task3/binary/bin/y.output
   0  $accept : S $end

   1  S : Start

   2  Start : Procedure Start
   3        |

   4  Procedure : PROCEDURE ProcedureSignature ProcedureBlock

   5  ProcedureBlock : START_BLOCK_OF_CODE Block Return END_BLOCK_OF_CODE

   6  Block : Define Block
   7        | Assignment Block
   8        | Procedure Block
   9        | Loop Block
  10        | If Block
  11        | START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE Block
  12        |

  13  ProcedureSignature : ID BEGIN_PARAMETER_LIST Parameters END_PARAMETER_LIST ProcedureReturn

  14  Parameters : IDENTIFIER SomeParameters
  15             | IDENTIFIER SomeParameters SEMICOLON Parameters
  16             |

  17  SomeParameters : SEPERATOR IDENTIFIER SomeParameters
  18                 | COLON Types

  19  Types : BOOLEAN
  20        | CHAR
  21        | INTEGER
  22        | STRING
  23        | PtrTypes
  24        | ArrayType

  25  PtrTypes : INTPTR
  26           | CHARPTR

  27  ArrayType : STRING BEGIN_STRING_INDEX INTEGER_CONST END_STRING_INDEX

  28  CONST_INT : INTEGER_CONST
  29            | BINARY
  30            | OCTAL
  31            | HEXADECIMAL

  32  E : E PLUS T
  33    | E MINUS T
  34    | T

  35  T : T MUL F
  36    | T DIVISION F
  37    | F

  38  F : BEGIN_PARAMETER_LIST E END_PARAMETER_LIST
  39    | ID
  40    | CONST_INT
  41    | Absolute
  42    | StringLenth

  43  AddressID : AMPERSAND ID

  44  ValueAddressID : VALUE_ADDRESS E

  45  Assignment : ID ASSIGN E SEMICOLON
  46             | ID ASSIGN AddressID SEMICOLON
  47             | ID ASSIGN ID BEGIN_PARAMETER_LIST EmptyOrPara END_PARAMETER_LIST SEMICOLON
  48             | ID ASSIGN Consts SEMICOLON
  49             | ID Array ASSIGN IndexedAssign SEMICOLON
  50             | ID ASSIGN AddressID Array SEMICOLON
  51             | ID ASSIGN ValueAddressID SEMICOLON
  52             | ValueAddressID ASSIGN E SEMICOLON
  53             | ValueAddressID ASSIGN CHAR_CONST SEMICOLON
  54             | ID ASSIGN NIL SEMICOLON
  55             | ID ASSIGN LogicOp SEMICOLON

  56  IndexedAssign : ID
  57                | CHAR_CONST

  58  Define : VAR IDents COLON Types SEMICOLON

  59  IDents : IDENTIFIER SEPERATOR IDents
  60         | IDENTIFIER

  61  IDentsWithEmpty : E SEPERATOR IDentsWithEmpty
  62                  | Consts SEPERATOR IDentsWithEmpty
  63                  | CONST_BOOLEAN SEPERATOR IDentsWithEmpty
  64                  | E
  65                  | Consts
  66                  | CONST_BOOLEAN

  67  EmptyOrPara : IDentsWithEmpty
  68              |

  69  ID : IDENTIFIER

  70  Absolute : VBAR E VBAR

  71  StringLenth : VBAR STRING_CONST VBAR

  72  Consts : CHAR_CONST
  73         | STRING_CONST

  74  CompOp : EQ
  75         | GT
  76         | GE
  77         | LT
  78         | LE
  79         | NE
  80         | NOT

  81  LogicOp : condWithAnd OR LogicOp
  82          | condWithAnd

  83  condWithAnd : condWithBrackets AND condWithAnd
  84              | condWithBrackets

  85  condWithBrackets : BEGIN_PARAMETER_LIST LogicOp END_PARAMETER_LIST
  86                   | CONST_BOOLEAN
  87                   | Condition

  88  Condition : E CompOp E
  89            | ValueAddressID CompOp ValueAddressID
  90            | E CompOp ValueAddressID
  91            | ValueAddressID CompOp E
  92            | ValueAddressID CompOp ID Array
  93            | AddressID CompOp AddressID
  94            | AddressID CompOp ID
  95            | ID Array CompOp ValueAddressID
  96            | ValueAddressID CompOp CHAR_CONST
  97            | CHAR_CONST CompOp ValueAddressID
  98            | ID Array CompOp ID Array
  99            | ID Array CompOp E
 100            | E CompOp ID Array
 101            | ID Array CompOp CHAR_CONST
 102            | CHAR_CONST CompOp ID Array
 103            | E CompOp Consts
 104            | CONST_BOOLEAN CompOp CONST_BOOLEAN
 105            | CONST_BOOLEAN CompOp E
 106            | E CompOp CONST_BOOLEAN
 107            | NOT ID
 108            | NOT CONST_BOOLEAN

 109  Return : RETURN E SEMICOLON
 110         | RETURN Consts SEMICOLON
 111         | RETURN CONST_BOOLEAN SEMICOLON
 112         | RETURN AddressID SEMICOLON
 113         | RETURN VALUE_ADDRESS E SEMICOLON
 114         | RETURN IDENTIFIER BEGIN_PARAMETER_LIST EmptyOrPara END_PARAMETER_LIST SEMICOLON
 115         | RETURN NIL SEMICOLON

 116  ProcedureReturn : RETURN Types

 117  Loop : WHILE BEGIN_PARAMETER_LIST ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE
 118       | WHILE BEGIN_PARAMETER_LIST LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE

 119  If : IF BEGIN_PARAMETER_LIST ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE ELSE START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE
 120     | IF BEGIN_PARAMETER_LIST LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE ELSE START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE
 121     | IF BEGIN_PARAMETER_LIST ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE
 122     | IF BEGIN_PARAMETER_LIST LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE

 123  Array : BEGIN_STRING_INDEX E END_STRING_INDEX

state 0
	$accept : . S $end  (0)
	Start : .  (3)

	PROCEDURE  shift 1
	$end  reduce 3

	S  goto 2
	Start  goto 3
	Procedure  goto 4


state 1
	Procedure : PROCEDURE . ProcedureSignature ProcedureBlock  (4)

	IDENTIFIER  shift 5
	.  error

	ProcedureSignature  goto 6
	ID  goto 7


state 2
	$accept : S . $end  (0)

	$end  accept


state 3
	S : Start .  (1)

	.  reduce 1


state 4
	Start : Procedure . Start  (2)
	Start : .  (3)

	PROCEDURE  shift 1
	$end  reduce 3

	Start  goto 8
	Procedure  goto 4


state 5
	ID : IDENTIFIER .  (69)

	.  reduce 69


state 6
	Procedure : PROCEDURE ProcedureSignature . ProcedureBlock  (4)

	START_BLOCK_OF_CODE  shift 9
	.  error

	ProcedureBlock  goto 10


state 7
	ProcedureSignature : ID . BEGIN_PARAMETER_LIST Parameters END_PARAMETER_LIST ProcedureReturn  (13)

	BEGIN_PARAMETER_LIST  shift 11
	.  error


state 8
	Start : Procedure Start .  (2)

	.  reduce 2


state 9
	ProcedureBlock : START_BLOCK_OF_CODE . Block Return END_BLOCK_OF_CODE  (5)
	Block : .  (12)

	IF  shift 12
	WHILE  shift 13
	VAR  shift 14
	VALUE_ADDRESS  shift 15
	PROCEDURE  shift 1
	START_BLOCK_OF_CODE  shift 16
	IDENTIFIER  shift 5
	RETURN  reduce 12

	Procedure  goto 17
	Block  goto 18
	Define  goto 19
	Assignment  goto 20
	Loop  goto 21
	If  goto 22
	ID  goto 23
	ValueAddressID  goto 24


state 10
	Procedure : PROCEDURE ProcedureSignature ProcedureBlock .  (4)

	.  reduce 4


state 11
	ProcedureSignature : ID BEGIN_PARAMETER_LIST . Parameters END_PARAMETER_LIST ProcedureReturn  (13)
	Parameters : .  (16)

	IDENTIFIER  shift 25
	END_PARAMETER_LIST  reduce 16

	Parameters  goto 26


state 12
	If : IF . BEGIN_PARAMETER_LIST ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE ELSE START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (119)
	If : IF . BEGIN_PARAMETER_LIST LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE ELSE START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (120)
	If : IF . BEGIN_PARAMETER_LIST ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (121)
	If : IF . BEGIN_PARAMETER_LIST LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (122)

	BEGIN_PARAMETER_LIST  shift 27
	.  error


state 13
	Loop : WHILE . BEGIN_PARAMETER_LIST ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (117)
	Loop : WHILE . BEGIN_PARAMETER_LIST LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (118)

	BEGIN_PARAMETER_LIST  shift 28
	.  error


state 14
	Define : VAR . IDents COLON Types SEMICOLON  (58)

	IDENTIFIER  shift 29
	.  error

	IDents  goto 30


state 15
	ValueAddressID : VALUE_ADDRESS . E  (44)

	VBAR  shift 31
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	BEGIN_PARAMETER_LIST  shift 35
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 37
	CONST_INT  goto 38
	E  goto 39
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43


state 16
	Block : START_BLOCK_OF_CODE . Block END_BLOCK_OF_CODE Block  (11)
	Block : .  (12)

	IF  shift 12
	WHILE  shift 13
	VAR  shift 14
	VALUE_ADDRESS  shift 15
	PROCEDURE  shift 1
	START_BLOCK_OF_CODE  shift 16
	IDENTIFIER  shift 5
	END_BLOCK_OF_CODE  reduce 12

	Procedure  goto 17
	Block  goto 44
	Define  goto 19
	Assignment  goto 20
	Loop  goto 21
	If  goto 22
	ID  goto 23
	ValueAddressID  goto 24


state 17
	Block : Procedure . Block  (8)
	Block : .  (12)

	IF  shift 12
	WHILE  shift 13
	VAR  shift 14
	VALUE_ADDRESS  shift 15
	PROCEDURE  shift 1
	START_BLOCK_OF_CODE  shift 16
	IDENTIFIER  shift 5
	RETURN  reduce 12
	END_BLOCK_OF_CODE  reduce 12

	Procedure  goto 17
	Block  goto 45
	Define  goto 19
	Assignment  goto 20
	Loop  goto 21
	If  goto 22
	ID  goto 23
	ValueAddressID  goto 24


state 18
	ProcedureBlock : START_BLOCK_OF_CODE Block . Return END_BLOCK_OF_CODE  (5)

	RETURN  shift 46
	.  error

	Return  goto 47


state 19
	Block : Define . Block  (6)
	Block : .  (12)

	IF  shift 12
	WHILE  shift 13
	VAR  shift 14
	VALUE_ADDRESS  shift 15
	PROCEDURE  shift 1
	START_BLOCK_OF_CODE  shift 16
	IDENTIFIER  shift 5
	RETURN  reduce 12
	END_BLOCK_OF_CODE  reduce 12

	Procedure  goto 17
	Block  goto 48
	Define  goto 19
	Assignment  goto 20
	Loop  goto 21
	If  goto 22
	ID  goto 23
	ValueAddressID  goto 24


state 20
	Block : Assignment . Block  (7)
	Block : .  (12)

	IF  shift 12
	WHILE  shift 13
	VAR  shift 14
	VALUE_ADDRESS  shift 15
	PROCEDURE  shift 1
	START_BLOCK_OF_CODE  shift 16
	IDENTIFIER  shift 5
	RETURN  reduce 12
	END_BLOCK_OF_CODE  reduce 12

	Procedure  goto 17
	Block  goto 49
	Define  goto 19
	Assignment  goto 20
	Loop  goto 21
	If  goto 22
	ID  goto 23
	ValueAddressID  goto 24


state 21
	Block : Loop . Block  (9)
	Block : .  (12)

	IF  shift 12
	WHILE  shift 13
	VAR  shift 14
	VALUE_ADDRESS  shift 15
	PROCEDURE  shift 1
	START_BLOCK_OF_CODE  shift 16
	IDENTIFIER  shift 5
	RETURN  reduce 12
	END_BLOCK_OF_CODE  reduce 12

	Procedure  goto 17
	Block  goto 50
	Define  goto 19
	Assignment  goto 20
	Loop  goto 21
	If  goto 22
	ID  goto 23
	ValueAddressID  goto 24


state 22
	Block : If . Block  (10)
	Block : .  (12)

	IF  shift 12
	WHILE  shift 13
	VAR  shift 14
	VALUE_ADDRESS  shift 15
	PROCEDURE  shift 1
	START_BLOCK_OF_CODE  shift 16
	IDENTIFIER  shift 5
	RETURN  reduce 12
	END_BLOCK_OF_CODE  reduce 12

	Procedure  goto 17
	Block  goto 51
	Define  goto 19
	Assignment  goto 20
	Loop  goto 21
	If  goto 22
	ID  goto 23
	ValueAddressID  goto 24


state 23
	Assignment : ID . ASSIGN E SEMICOLON  (45)
	Assignment : ID . ASSIGN AddressID SEMICOLON  (46)
	Assignment : ID . ASSIGN ID BEGIN_PARAMETER_LIST EmptyOrPara END_PARAMETER_LIST SEMICOLON  (47)
	Assignment : ID . ASSIGN Consts SEMICOLON  (48)
	Assignment : ID . Array ASSIGN IndexedAssign SEMICOLON  (49)
	Assignment : ID . ASSIGN AddressID Array SEMICOLON  (50)
	Assignment : ID . ASSIGN ValueAddressID SEMICOLON  (51)
	Assignment : ID . ASSIGN NIL SEMICOLON  (54)
	Assignment : ID . ASSIGN LogicOp SEMICOLON  (55)

	ASSIGN  shift 52
	BEGIN_STRING_INDEX  shift 53
	.  error

	Array  goto 54


state 24
	Assignment : ValueAddressID . ASSIGN E SEMICOLON  (52)
	Assignment : ValueAddressID . ASSIGN CHAR_CONST SEMICOLON  (53)

	ASSIGN  shift 55
	.  error


state 25
	Parameters : IDENTIFIER . SomeParameters  (14)
	Parameters : IDENTIFIER . SomeParameters SEMICOLON Parameters  (15)

	COLON  shift 56
	SEPERATOR  shift 57
	.  error

	SomeParameters  goto 58


state 26
	ProcedureSignature : ID BEGIN_PARAMETER_LIST Parameters . END_PARAMETER_LIST ProcedureReturn  (13)

	END_PARAMETER_LIST  shift 59
	.  error


state 27
	If : IF BEGIN_PARAMETER_LIST . ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE ELSE START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (119)
	If : IF BEGIN_PARAMETER_LIST . LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE ELSE START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (120)
	If : IF BEGIN_PARAMETER_LIST . ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (121)
	If : IF BEGIN_PARAMETER_LIST . LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (122)

	CONST_BOOLEAN  shift 60
	NOT  shift 61
	AMPERSAND  shift 62
	VALUE_ADDRESS  shift 15
	VBAR  shift 31
	CHAR_CONST  shift 63
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	BEGIN_PARAMETER_LIST  shift 64
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 65
	CONST_INT  goto 38
	E  goto 66
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43
	AddressID  goto 67
	ValueAddressID  goto 68
	LogicOp  goto 69
	condWithAnd  goto 70
	condWithBrackets  goto 71
	Condition  goto 72


state 28
	Loop : WHILE BEGIN_PARAMETER_LIST . ID END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (117)
	Loop : WHILE BEGIN_PARAMETER_LIST . LogicOp END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (118)

	CONST_BOOLEAN  shift 60
	NOT  shift 61
	AMPERSAND  shift 62
	VALUE_ADDRESS  shift 15
	VBAR  shift 31
	CHAR_CONST  shift 63
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	BEGIN_PARAMETER_LIST  shift 64
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 73
	CONST_INT  goto 38
	E  goto 66
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43
	AddressID  goto 67
	ValueAddressID  goto 68
	LogicOp  goto 74
	condWithAnd  goto 70
	condWithBrackets  goto 71
	Condition  goto 72


state 29
	IDents : IDENTIFIER . SEPERATOR IDents  (59)
	IDents : IDENTIFIER .  (60)

	SEPERATOR  shift 75
	COLON  reduce 60


state 30
	Define : VAR IDents . COLON Types SEMICOLON  (58)

	COLON  shift 76
	.  error


state 31
	Absolute : VBAR . E VBAR  (70)
	StringLenth : VBAR . STRING_CONST VBAR  (71)

	VBAR  shift 31
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	STRING_CONST  shift 77
	BEGIN_PARAMETER_LIST  shift 35
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 37
	CONST_INT  goto 38
	E  goto 78
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43


state 32
	CONST_INT : BINARY .  (29)

	.  reduce 29


state 33
	CONST_INT : OCTAL .  (30)

	.  reduce 30


state 34
	CONST_INT : INTEGER_CONST .  (28)

	.  reduce 28


state 35
	F : BEGIN_PARAMETER_LIST . E END_PARAMETER_LIST  (38)

	VBAR  shift 31
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	BEGIN_PARAMETER_LIST  shift 35
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 37
	CONST_INT  goto 38
	E  goto 79
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43


state 36
	CONST_INT : HEXADECIMAL .  (31)

	.  reduce 31


state 37
	F : ID .  (39)

	.  reduce 39


state 38
	F : CONST_INT .  (40)

	.  reduce 40


state 39
	E : E . PLUS T  (32)
	E : E . MINUS T  (33)
	ValueAddressID : VALUE_ADDRESS E .  (44)

	MINUS  shift 80
	PLUS  shift 81
	ASSIGN  reduce 44
	EQ  reduce 44
	GT  reduce 44
	GE  reduce 44
	LT  reduce 44
	LE  reduce 44
	NE  reduce 44
	NOT  reduce 44
	AND  reduce 44
	OR  reduce 44
	SEMICOLON  reduce 44
	END_PARAMETER_LIST  reduce 44


state 40
	E : T .  (34)
	T : T . MUL F  (35)
	T : T . DIVISION F  (36)

	MUL  shift 82
	DIVISION  shift 83
	ASSIGN  reduce 34
	EQ  reduce 34
	GT  reduce 34
	GE  reduce 34
	LT  reduce 34
	LE  reduce 34
	NE  reduce 34
	NOT  reduce 34
	MINUS  reduce 34
	PLUS  reduce 34
	AND  reduce 34
	OR  reduce 34
	VBAR  reduce 34
	SEMICOLON  reduce 34
	SEPERATOR  reduce 34
	END_PARAMETER_LIST  reduce 34
	END_STRING_INDEX  reduce 34


state 41
	T : F .  (37)

	.  reduce 37


state 42
	F : Absolute .  (41)

	.  reduce 41


state 43
	F : StringLenth .  (42)

	.  reduce 42


state 44
	Block : START_BLOCK_OF_CODE Block . END_BLOCK_OF_CODE Block  (11)

	END_BLOCK_OF_CODE  shift 84
	.  error


state 45
	Block : Procedure Block .  (8)

	.  reduce 8


state 46
	Return : RETURN . E SEMICOLON  (109)
	Return : RETURN . Consts SEMICOLON  (110)
	Return : RETURN . CONST_BOOLEAN SEMICOLON  (111)
	Return : RETURN . AddressID SEMICOLON  (112)
	Return : RETURN . VALUE_ADDRESS E SEMICOLON  (113)
	Return : RETURN . IDENTIFIER BEGIN_PARAMETER_LIST EmptyOrPara END_PARAMETER_LIST SEMICOLON  (114)
	Return : RETURN . NIL SEMICOLON  (115)

	CONST_BOOLEAN  shift 85
	AMPERSAND  shift 62
	VALUE_ADDRESS  shift 86
	NIL  shift 87
	VBAR  shift 31
	CHAR_CONST  shift 88
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	STRING_CONST  shift 89
	BEGIN_PARAMETER_LIST  shift 35
	IDENTIFIER  shift 90
	HEXADECIMAL  shift 36
	.  error

	ID  goto 37
	CONST_INT  goto 38
	E  goto 91
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43
	AddressID  goto 92
	Consts  goto 93


state 47
	ProcedureBlock : START_BLOCK_OF_CODE Block Return . END_BLOCK_OF_CODE  (5)

	END_BLOCK_OF_CODE  shift 94
	.  error


state 48
	Block : Define Block .  (6)

	.  reduce 6


state 49
	Block : Assignment Block .  (7)

	.  reduce 7


state 50
	Block : Loop Block .  (9)

	.  reduce 9


state 51
	Block : If Block .  (10)

	.  reduce 10


state 52
	Assignment : ID ASSIGN . E SEMICOLON  (45)
	Assignment : ID ASSIGN . AddressID SEMICOLON  (46)
	Assignment : ID ASSIGN . ID BEGIN_PARAMETER_LIST EmptyOrPara END_PARAMETER_LIST SEMICOLON  (47)
	Assignment : ID ASSIGN . Consts SEMICOLON  (48)
	Assignment : ID ASSIGN . AddressID Array SEMICOLON  (50)
	Assignment : ID ASSIGN . ValueAddressID SEMICOLON  (51)
	Assignment : ID ASSIGN . NIL SEMICOLON  (54)
	Assignment : ID ASSIGN . LogicOp SEMICOLON  (55)

	CONST_BOOLEAN  shift 60
	NOT  shift 61
	AMPERSAND  shift 62
	VALUE_ADDRESS  shift 15
	NIL  shift 95
	VBAR  shift 31
	CHAR_CONST  shift 96
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	STRING_CONST  shift 89
	BEGIN_PARAMETER_LIST  shift 64
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 97
	CONST_INT  goto 38
	E  goto 98
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43
	AddressID  goto 99
	ValueAddressID  goto 100
	Consts  goto 101
	LogicOp  goto 102
	condWithAnd  goto 70
	condWithBrackets  goto 71
	Condition  goto 72


state 53
	Array : BEGIN_STRING_INDEX . E END_STRING_INDEX  (123)

	VBAR  shift 31
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	BEGIN_PARAMETER_LIST  shift 35
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 37
	CONST_INT  goto 38
	E  goto 103
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43


state 54
	Assignment : ID Array . ASSIGN IndexedAssign SEMICOLON  (49)

	ASSIGN  shift 104
	.  error


state 55
	Assignment : ValueAddressID ASSIGN . E SEMICOLON  (52)
	Assignment : ValueAddressID ASSIGN . CHAR_CONST SEMICOLON  (53)

	VBAR  shift 31
	CHAR_CONST  shift 105
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	BEGIN_PARAMETER_LIST  shift 35
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 37
	CONST_INT  goto 38
	E  goto 106
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43


state 56
	SomeParameters : COLON . Types  (18)

	BOOLEAN  shift 107
	CHAR  shift 108
	INTEGER  shift 109
	STRING  shift 110
	INTPTR  shift 111
	CHARPTR  shift 112
	.  error

	Types  goto 113
	PtrTypes  goto 114
	ArrayType  goto 115


state 57
	SomeParameters : SEPERATOR . IDENTIFIER SomeParameters  (17)

	IDENTIFIER  shift 116
	.  error


state 58
	Parameters : IDENTIFIER SomeParameters .  (14)
	Parameters : IDENTIFIER SomeParameters . SEMICOLON Parameters  (15)

	SEMICOLON  shift 117
	END_PARAMETER_LIST  reduce 14


state 59
	ProcedureSignature : ID BEGIN_PARAMETER_LIST Parameters END_PARAMETER_LIST . ProcedureReturn  (13)

	RETURN  shift 118
	.  error

	ProcedureReturn  goto 119


state 60
	condWithBrackets : CONST_BOOLEAN .  (86)
	Condition : CONST_BOOLEAN . CompOp CONST_BOOLEAN  (104)
	Condition : CONST_BOOLEAN . CompOp E  (105)

	EQ  shift 120
	GT  shift 121
	GE  shift 122
	LT  shift 123
	LE  shift 124
	NE  shift 125
	NOT  shift 126
	AND  reduce 86
	OR  reduce 86
	SEMICOLON  reduce 86
	END_PARAMETER_LIST  reduce 86

	CompOp  goto 127


state 61
	Condition : NOT . ID  (107)
	Condition : NOT . CONST_BOOLEAN  (108)

	CONST_BOOLEAN  shift 128
	IDENTIFIER  shift 5
	.  error

	ID  goto 129


state 62
	AddressID : AMPERSAND . ID  (43)

	IDENTIFIER  shift 5
	.  error

	ID  goto 130


state 63
	Condition : CHAR_CONST . CompOp ValueAddressID  (97)
	Condition : CHAR_CONST . CompOp ID Array  (102)

	EQ  shift 120
	GT  shift 121
	GE  shift 122
	LT  shift 123
	LE  shift 124
	NE  shift 125
	NOT  shift 126
	.  error

	CompOp  goto 131


state 64
	F : BEGIN_PARAMETER_LIST . E END_PARAMETER_LIST  (38)
	condWithBrackets : BEGIN_PARAMETER_LIST . LogicOp END_PARAMETER_LIST  (85)

	CONST_BOOLEAN  shift 60
	NOT  shift 61
	AMPERSAND  shift 62
	VALUE_ADDRESS  shift 15
	VBAR  shift 31
	CHAR_CONST  shift 63
	BINARY  shift 32
	OCTAL  shift 33
	INTEGER_CONST  shift 34
	BEGIN_PARAMETER_LIST  shift 64
	IDENTIFIER  shift 5
	HEXADECIMAL  shift 36
	.  error

	ID  goto 132
	CONST_INT  goto 38
	E  goto 133
	T  goto 40
	F  goto 41
	Absolute  goto 42
	StringLenth  goto 43
	AddressID  goto 67
	ValueAddressID  goto 68
	LogicOp  goto 134
	condWithAnd  goto 70
	condWithBrackets  goto 71
	Condition  goto 72


state 65
	F : ID .  (39)
	Condition : ID . Array CompOp ValueAddressID  (95)
	Condition : ID . Array CompOp ID Array  (98)
	Condition : ID . Array CompOp E  (99)
	Condition : ID . Array CompOp CHAR_CONST  (101)
	If : IF BEGIN_PARAMETER_LIST ID . END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE ELSE START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (119)
	If : IF BEGIN_PARAMETER_LIST ID . END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (121)

	END_PARAMETER_LIST  shift 135
	BEGIN_STRING_INDEX  shift 53
	EQ  reduce 39
	GT  reduce 39
	GE  reduce 39
	LT  reduce 39
	LE  reduce 39
	NE  reduce 39
	NOT  reduce 39
	MINUS  reduce 39
	PLUS  reduce 39
	MUL  reduce 39
	DIVISION  reduce 39

	Array  goto 136


state 66
	E : E . PLUS T  (32)
	E : E . MINUS T  (33)
	Condition : E . CompOp E  (88)
	Condition : E . CompOp ValueAddressID  (90)
	Condition : E . CompOp ID Array  (100)
	Condition : E . CompOp Consts  (103)
	Condition : E . CompOp CONST_BOOLEAN  (106)

	EQ  shift 120
	GT  shift 121
	GE  shift 122
	LT  shift 123
	LE  shift 124
	NE  shift 125
	NOT  shift 126
	MINUS  shift 80
	PLUS  shift 81
	.  error

	CompOp  goto 137


state 67
	Condition : AddressID . CompOp AddressID  (93)
	Condition : AddressID . CompOp ID  (94)

	EQ  shift 120
	GT  shift 121
	GE  shift 122
	LT  shift 123
	LE  shift 124
	NE  shift 125
	NOT  shift 126
	.  error

	CompOp  goto 138


state 68
	Condition : ValueAddressID . CompOp ValueAddressID  (89)
	Condition : ValueAddressID . CompOp E  (91)
	Condition : ValueAddressID . CompOp ID Array  (92)
	Condition : ValueAddressID . CompOp CHAR_CONST  (96)

	EQ  shift 120
	GT  shift 121
	GE  shift 122
	LT  shift 123
	LE  shift 124
	NE  shift 125
	NOT  shift 126
	.  error

	CompOp  goto 139


state 69
	If : IF BEGIN_PARAMETER_LIST LogicOp . END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE ELSE START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (120)
	If : IF BEGIN_PARAMETER_LIST LogicOp . END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (122)

	END_PARAMETER_LIST  shift 140
	.  error


state 70
	LogicOp : condWithAnd . OR LogicOp  (81)
	LogicOp : condWithAnd .  (82)

	OR  shift 141
	SEMICOLON  reduce 82
	END_PARAMETER_LIST  reduce 82


state 71
	condWithAnd : condWithBrackets . AND condWithAnd  (83)
	condWithAnd : condWithBrackets .  (84)

	AND  shift 142
	OR  reduce 84
	SEMICOLON  reduce 84
	END_PARAMETER_LIST  reduce 84


state 72
	condWithBrackets : Condition .  (87)

	.  reduce 87


state 73
	F : ID .  (39)
	Condition : ID . Array CompOp ValueAddressID  (95)
	Condition : ID . Array CompOp ID Array  (98)
	Condition : ID . Array CompOp E  (99)
	Condition : ID . Array CompOp CHAR_CONST  (101)
	Loop : WHILE BEGIN_PARAMETER_LIST ID . END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (117)

	END_PARAMETER_LIST  shift 143
	BEGIN_STRING_INDEX  shift 53
	EQ  reduce 39
	GT  reduce 39
	GE  reduce 39
	LT  reduce 39
	LE  reduce 39
	NE  reduce 39
	NOT  reduce 39
	MINUS  reduce 39
	PLUS  reduce 39
	MUL  reduce 39
	DIVISION  reduce 39

	Array  goto 136


state 74
	Loop : WHILE BEGIN_PARAMETER_LIST LogicOp . END_PARAMETER_LIST START_BLOCK_OF_CODE Block END_BLOCK_OF_CODE  (118)

	END_PARAMETER_LIST  shift 144
	.  error


state 75
	IDents : IDENTIFIER SEPERATOR . IDents  (59)

	IDENTIFIER  shift 29
	.  error

	IDents  goto 145


state 76
	Define : VAR IDents COLON . Types SEMICOLON  (58)
